# url_shortener

./: .bandit.yaml  .env.example  .gitignore  .pre-commit-config.yaml  DEPLOY.md  DEPLOY_MANUAL.md  Dockerfile  PRE_COMMIT.md  QUICK_DEPLOY.md  README.md  alembic.ini  docker-compose.yaml  entrypoint.sh  index.html  pyproject.toml
.github/: .gitignore  ENV_TEMPLATE.md  SECRETS.md
.github/workflows/: cd-deploy.yaml  cd.yaml  ci-cd.yaml  ci-tests.yaml  ci.yaml  deploy.yaml  manual-deploy.yaml  release.yaml
alembic/: README.md  env.py
alembic/versions/: 001_initial.py  002_add_users.py
scripts/: install-pre-commit.bat  install-pre-commit.sh
src/: __init__.py  config.py  exceptions.py  logging_config.py  main.py  rate_limiter.py  schemas.py  service.py  shortener.py  worker.py
src/auth/: __init__.py  crud.py  dependencies.py  jwt.py  router.py  schemas.py
src/cache/: __init__.py  redis_client.py
src/database/: __init__.py  crud.py  db.py  models.py
tests/: conftest.py  test_api.py  test_auth.py  test_cache.py  test_service.py
