[project]
name = "url-shortener-prod"
version = "0.3.0"
description = "URL Shortener API with FastAPI and PostgreSQL"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.14.0",
    "arq>=0.26.3",
    "asyncpg>=0.30.0",
    "bcrypt>=4.0.0",
    "email-validator>=2.2.0",
    "fastapi>=0.121.1",
    "geoip2>=5.0.0",
    "greenlet>=3.2.4",
    "httpx>=0.28.1",
    "passlib>=1.7.4",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.7.0",
    "pyjwt>=2.9.0",
    "python-json-logger>=3.2.0",
    "redis>=5.2.0",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.44",
    "user-agents>=2.2.0",
    "uvicorn>=0.38.0",
]

[project.optional-dependencies]
dev = [
    "bandit>=1.7.0",
    "black>=24.0.0",
    "mypy>=1.8.0",
    "pip-audit>=2.5.0",
    "pre-commit>=3.6.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "types-aiofiles>=23.2.0",
    "types-passlib>=1.7.0",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.ruff]
# Ruff is a new super-fast tool that replaces both flake8 and isort
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (black handles this)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from inside except
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "B008"]
"src/main.py" = ["ARG"]  # Unused arguments required by FastAPI

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_return_any = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]
disable_error_code = ["misc"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = [".", "src"]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*", "*/.venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 70
show_missing = true
